...
            .background(Color.White, CircleShape)
            .clickable { expanded = true },
        contentAlignment = Alignment.Center
    ) {
        Icon(
            imageVector = Icons.Default.Person,
            contentDescription = "Perfil",
            tint = Color(0xFFEF4444),
            modifier = Modifier.size(30.dp)
        )
        DropdownMenu(
            expanded = expanded,
            onDismissRequest = { expanded = false }
...
                }
            )

            Divider()

            DropdownMenuItem(
                text = { Text("Cerrar Sesión") },
                onClick = {
                    expanded = false
                    onCerrarSesion()
                }
            )
        }
...
